# ImKindaToxic

./: README.md  isolated  main.py  pyproject.toml  setup.sh
ImKindaToxic/: main.py
stuff/: socks4.txt  splashes
