[tool.poetry]
name = "imkindatoxic"
version = "0.1.0"
description = ""
authors = ["Rondell Sarrett III <316thebrains@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1"
bs4 = "^0.0.1"
colorama = "^0.4.3"
replit = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
