[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Rondell Sarrett III <316thebrains@gmail.com>"]
description = ""
name = "imkindatoxic"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
colorama = "^0.4.3"
python = "^3.7"
replit = "^1.1"
termcolor = "^1.1"
pythonping = "^1.0"
[tool.poetry.dev-dependencies]
